# cppMathKernel

./: CMakeLists.txt  README.md  blas.cpp  blas.h  interface.cpp  linpack.cpp  linpack.h  main.cpp  test.cpp  test.h  utils.cpp  utils.h
include/: data_gen.h
include/factor/: interface.h
include/matlab/: blas.h  matlab.h  matrix.h  util.h
src/: data_gen.cpp  main.cpp
src/factor/: blas.cpp  interface.cpp  linpack.cpp  test.cpp  utils.cpp
src/matlab/: blas.c  matlab.c  util.c
